OCPBUGS-16707/deployment/api-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-route
spec:
  path: /api
  to:
    kind: Service
    name: api-service
    weight: 100
  port:
    targetPort: http
