OCPBUGS-16707/deployment/frontend-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
spec:
  to:
    kind: Service
    name: frontend-service
    weight: 100
  port:
    targetPort: http
